/*
The MIT License (MIT)

Copyright (c) 2018 SavinMax. All rights reserved.

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the "Software"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
*/
syntax = "proto3";

option go_package = "proto";

service GameRpcServer {
    // Rpc streaming
    rpc RpcStream(stream StreamAgentMsg) returns (stream StreamAgentRsp) {}
    // Proxy streaming
    rpc AgentStream(stream StreamAgentMsg) returns (stream StreamAgentRsp) {}
    // Start Actor
    rpc StartActor(StartActorReq) returns (StartActorRsp) {}
}

message StreamAgentMsg {
    int32 ReqId = 1;
    int32 ReqType = 2;
    string FromActorId = 3;
    string ToActorId = 4;
    bytes data = 5;
}

message StreamAgentRsp {
    int32 ReqId = 1;
    string FromActorId = 2;
    bytes data = 3;
}

message StartActorReq {
    string actorId = 1;
    int64 timeout = 2;
}

message StartActorRsp {
    bool success = 1;
}
